@@ -9,6 +9,9 @@
                     "name": "cbFieldPadding",
                     "category": "a_cb_fields"
                 },{
+                    "name": "cbFieldSize",
+                    "category": "a_cb_fields"
+                },{
                     "name": "cbFieldSegmentType",
                     "category": "a_cb_fields"
                 },{
@@ -19,9 +22,6 @@
                     "category": "a_cb_fields"
                 },{
                     "name": "cbFieldMessageType",
-                    "category": "a_cb_fields"
-                },{
-                    "name": "cbFieldMessageSize",
                     "category": "a_cb_fields"
                 },{
                     "name": "cbGalleryDisplayType",
