@@ -1,4 +1,4 @@
-<blockquote class="ui quote">
+<blockquote class="ui [[+size]] [[+layout_type]] quote">
     <p>[[+quote]]</p>
     [[+cite:notempty=`<footer>[[+cite]]</footer>`]]
 </blockquote>
