@@ -1,3 +1,4 @@
 Standard=
 Styled (600px wide)=styled
 Styled (fluid width)=fluid styled
+Inverted=fluid inverted
