@@ -1,5 +1,8 @@
+Mini=mini
+Tiny=tiny
 Small=small
 Medium=
 Large=large
+Big=big
 Huge=huge
 Massive=massive
